--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,3 +47,14 @@ body {
 
 footer i {
   font-size: 40px; }
+
+#about-section_0 {
+  background-image: url("../images/about-section_0-bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50%;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25); }
+
+#about-section_2 .card {
+  background-color: #fff;
+  min-height: 300px; }
