--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -50,7 +50,7 @@ $primary: #37BEBF;
     background: linear-gradient(0deg, rgba(254, 254, 253, 0.80) 0%, rgba(254, 254, 253, 0.80) 100%), $primary;
 }
 
-.card-with-bg{
+.card-with-bg {
     background-image: url(../images/home-section_3-bg-img.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -68,8 +68,23 @@ $primary: #37BEBF;
     }
 }
 
-footer{
-    i{
+footer {
+    i {
         font-size: 40px;
+    }
+}
+
+#about-section_0 {
+    background-image: url('../images/about-section_0-bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50%;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+#about-section_2{
+    .card{
+        background-color: #fff;
+        min-height: 300px;
     }
 }
