--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -21,6 +21,9 @@
     }
 }
 
+$primary: #37BEBF;
+$body-font-color: #2D2E36;
+
 * {
     font-family: 'Quicksand', sans-serif;
     box-sizing: border-box;
@@ -28,9 +31,10 @@
 
 body {
     font-size: 18px;
+    color: $body-font-color
 }
 
-$primary: #37BEBF;
+
 
 .navbar {
     max-height: 118px;
@@ -74,7 +78,8 @@ footer {
     }
 }
 
-#about-section_0 {
+#about-section_0,
+#contact-section_0 {
     background-image: url('../images/about-section_0-bg.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -82,9 +87,17 @@ footer {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-#about-section_2{
-    .card{
+#about-section_2 {
+    .card {
         background-color: #fff;
         min-height: 300px;
     }
+}
+
+#contact-section_2 {
+    background-color: $body-font-color;
+}
+
+.font-color-primary {
+    color: $primary
 }
