--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -124,11 +124,28 @@ footer {
 }
 
 .modal-content {
-    background-image: url(../images/breathing-section_1-popup_1-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     width: 500px;
     height: 500px;
+}
+
+#deepBreathing {
+    .modal-content {
+        background-image: url(../images/breathing-section_1-popup_1-bg.png);
+    }
+}
+
+#box {
+    .modal-content {
+        background-image: url(../images/breathing-section_1-popup_2-bg.png);
+    }
+}
+
+#round {
+    .modal-content {
+        background-image: url(../images/breathing-section_1-popup_3-bg.png);
+    }
 }
 
 .triangle-container {
@@ -140,16 +157,99 @@ footer {
     border-bottom: 173.21px solid $primary;
     margin: 100px auto;
     opacity: 0.4;
+
+    .dot {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        background-color: #e74c3c;
+        border-radius: 50%;
+        animation: moveDot 10s linear infinite;
+    }
 }
 
-.dot {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    background-color: #e74c3c;
-    border-radius: 50%;
-    animation: moveDot 10s linear infinite;
+.square-container {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    margin: 100px auto;
+    background-color: $primary;
+    border: 2px solid $primary;
+    opacity: 0.4;
+
+    .dot {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        background-color: #e74c3c;
+        border-radius: 50%;
+        animation: moveDotSquare 10s linear infinite;
+    }
 }
+
+.circle-container {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    margin: 100px auto;
+    background-color: $primary;
+    border-radius: 50%;
+    opacity: 0.4;
+
+    .dot {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        background-color: #e74c3c;
+        border-radius: 50%;
+        animation: moveDotRound 8s linear infinite;
+        top: 45%;
+        left: 45%;
+    }
+
+}
+
+
+
+
+@keyframes moveDotRound {
+
+    0% {
+        transform: translate(0, 0) rotate(0deg) translateX(100px) rotate(0deg);
+    }
+
+    100% {
+        transform: translate(0, 0) rotate(360deg) translateX(100px) rotate(-360deg);
+    }
+}
+
+@keyframes moveDotSquare {
+    0% {
+        top: -12px;
+        left: -12px;
+    }
+
+    25% {
+        top: -12px;
+        left: 188px;
+    }
+
+    50% {
+        top: 188px;
+        left: 188px;
+    }
+
+    75% {
+        top: 188px;
+        left: -12px;
+    }
+
+    100% {
+        top: -12px;
+        left: -12px;
+    }
+}
+
 
 @keyframes moveDot {
     0% {
